[package]
name = "amsterdam"
version = "0.1.0"
authors = ["Ana Gelez <ana@gelez.xyz>"]
license = "GPLv3.0"
edition = "2018"

[dependencies]
clap = "2.0"
dotenv = "0.13"
plume-api = { git = "https://github.com/Plume-org/Plume", rev = "aee604751193aaebb0a858dc81dc15a9ab67659e" }
reqwest = "0.9.3"
rpassword = "2.0.0"
serde_json = "1.0"
